--- a/package.json
+++ b/package.json
@@ -5,34 +5,71 @@
   "scripts": {},
   "private": true,
   "dependencies": {
-    "vue": "^3.3.4"
+    "@angular/animations": "~18.2.0",
+    "@angular/common": "~18.2.0",
+    "@angular/compiler": "~18.2.0",
+    "@angular/core": "~18.2.0",
+    "@angular/forms": "~18.2.0",
+    "@angular/platform-browser": "~18.2.0",
+    "@angular/platform-browser-dynamic": "~18.2.0",
+    "@angular/platform-server": "~18.2.0",
+    "@angular/router": "~18.2.0",
+    "@angular/ssr": "~18.2.0",
+    "express": "~4.18.2",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "vue": "^3.3.4",
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~18.2.0",
+    "@angular-devkit/core": "~18.2.0",
+    "@angular-devkit/schematics": "~18.2.0",
+    "@angular-eslint/eslint-plugin": "^18.0.1",
+    "@angular-eslint/eslint-plugin-template": "^18.0.1",
+    "@angular-eslint/template-parser": "^18.0.1",
+    "@angular/cli": "~18.2.0",
+    "@angular/compiler-cli": "~18.2.0",
+    "@angular/language-service": "~18.2.0",
+    "@nx/angular": "^19.6.4",
     "@nx/eslint": "19.6.4",
     "@nx/eslint-plugin": "19.6.4",
+    "@nx/jest": "19.6.4",
     "@nx/js": "19.6.4",
     "@nx/vite": "19.6.4",
     "@nx/vue": "19.6.4",
     "@nx/web": "19.6.4",
     "@nx/workspace": "19.6.4",
+    "@schematics/angular": "~18.2.0",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
+    "@types/express": "4.17.14",
+    "@types/jest": "^29.5.12",
+    "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
+    "@typescript-eslint/utils": "^7.16.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
     "@vue/eslint-config-prettier": "7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.4.1",
+    "ajv": "^8.17.1",
+    "browser-sync": "^3.0.0",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-vue": "^9.16.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "~14.1.0",
     "jsdom": "~22.1.0",
     "nx": "19.6.4",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.5.2",
     "vite": "^5.0.0",
     "vitest": "^1.3.1",
