storybook for shell

--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -141,6 +141,55 @@
         }
       },
       "defaultConfiguration": "production"
+    },
+    "storybook": {
+      "executor": "@storybook/angular:start-storybook",
+      "options": {
+        "port": 4400,
+        "configDir": "apps/shell/.storybook",
+        "browserTarget": "shell:build",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "build-storybook": {
+      "executor": "@storybook/angular:build-storybook",
+      "outputs": ["{options.outputDir}"],
+      "options": {
+        "outputDir": "dist/storybook/shell",
+        "configDir": "apps/shell/.storybook",
+        "browserTarget": "shell:build",
+        "compodoc": false
+      },
+      "configurations": {
+        "ci": {
+          "quiet": true
+        }
+      }
+    },
+    "test-storybook": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "test-storybook -c apps/shell/.storybook --url=http://localhost:4400"
+      }
+    },
+    "static-storybook": {
+      "executor": "@nx/web:file-server",
+      "dependsOn": ["build-storybook"],
+      "options": {
+        "buildTarget": "shell:build-storybook",
+        "staticFilePath": "dist/storybook/shell",
+        "spa": true
+      },
+      "configurations": {
+        "ci": {
+          "buildTarget": "shell:build-storybook:ci"
+        }
+      }
     }
   }
 }
