--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@angular/router": "~18.2.0",
     "@angular/ssr": "~18.2.0",
     "express": "~4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "vue": "^3.3.4",
@@ -36,11 +38,19 @@
     "@nx/eslint-plugin": "19.6.4",
     "@nx/jest": "19.6.4",
     "@nx/js": "19.6.4",
+    "@nx/storybook": "^19.6.4",
     "@nx/vite": "19.6.4",
     "@nx/vue": "19.6.4",
     "@nx/web": "19.6.4",
     "@nx/workspace": "19.6.4",
     "@schematics/angular": "~18.2.0",
+    "@storybook/addon-essentials": "^8.2.8",
+    "@storybook/addon-interactions": "^8.2.8",
+    "@storybook/angular": "^8.2.8",
+    "@storybook/core-server": "^8.2.8",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.9.1",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
@@ -68,6 +78,7 @@
     "nx": "19.6.4",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
+    "storybook": "8.2.9",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.5.2",
