--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "@angular/platform-server": "~18.2.0",
     "@angular/router": "~18.2.0",
     "@angular/ssr": "~18.2.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/platform-express": "^10.0.2",
+    "axios": "^1.6.0",
     "express": "~4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "vue": "^3.3.4",
@@ -33,15 +38,20 @@
     "@angular/cli": "~18.2.0",
     "@angular/compiler-cli": "~18.2.0",
     "@angular/language-service": "~18.2.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
     "@nx/angular": "^19.6.4",
     "@nx/eslint": "19.6.4",
     "@nx/eslint-plugin": "19.6.4",
     "@nx/jest": "19.6.4",
     "@nx/js": "19.6.4",
+    "@nx/nest": "^19.6.4",
+    "@nx/node": "19.6.4",
     "@nx/storybook": "^19.6.4",
     "@nx/vite": "19.6.4",
     "@nx/vue": "19.6.4",
     "@nx/web": "19.6.4",
+    "@nx/webpack": "19.6.4",
     "@nx/workspace": "19.6.4",
     "@schematics/angular": "~18.2.0",
     "@storybook/addon-essentials": "^8.2.8",
@@ -73,6 +83,7 @@
     "eslint-plugin-vue": "^9.16.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "jest-preset-angular": "~14.1.0",
     "jsdom": "~22.1.0",
     "nx": "19.6.4",
@@ -84,6 +95,7 @@
     "typescript": "~5.5.2",
     "vite": "^5.0.0",
     "vitest": "^1.3.1",
-    "vue-tsc": "^2.0.0"
+    "vue-tsc": "^2.0.0",
+    "webpack-cli": "^5.1.4"
   }
 }
