nest gui api shell front

--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -62,7 +62,10 @@
           "buildTarget": "shell:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/shell/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular-devkit/build-angular:extract-i18n",
