--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -23,7 +23,7 @@ pipelines:
             - npx nx affected --base=origin/master -t lint test build
 
   branches:
-    main:
+    master:
       - step:
           name: 'Build and test affected apps on "master" branch changes'
           script:
