--- a/apps/shell/project.json
+++ b/apps/shell/project.json
@@ -74,7 +74,8 @@
       }
     },
     "lint": {
-      "executor": "@nx/eslint:lint"
+      "executor": "@nx/eslint:lint",
+      "cache": true
     },
     "test": {
       "executor": "@nx/jest:jest",
